# teachers

./: .gitignore  .nojekyll  3RD-PARTY.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml  serve.py  todos.md
.github/workflows/: deploy-pages.yml
experiments/micropip-worker-antlr4/: antlr4.html
experiments/micropip-worker-antlr4/js/: main.js  worker.js
experiments/micropip-worker-antlr4/python/: custom_code.py  test_antlr.py  test_antlr4.py  test_sympy_parse_expr.py
notes/: group_terms_usage.md
scenery/: app.js  index.html  playground.html
src/teachers/: corrector.py  defaults.py  formatting.py  generator.py  hypercube.py  maths.py
tests/: __main__.py  test_add_simplification.py  test_antlr4.py  test_as_decimal.py  test_complex_operations.py  test_corrector.py  test_deserialization_from_formal.py  test_deserialization_from_sympy.py  test_double_minus_fix.py  test_eval_methods.py  test_formatting.py  test_fraction_symbol_mul.py  test_generator.py  test_group_terms.py  test_inf.py  test_interval.py  test_interval_edge_cases.py  test_latex_formatting.py  test_latex_output.py  test_maths_collection_sympy.py  test_maths_objects.py  test_mul_simplification.py  test_multiplication_symbols.py  test_negative_exponents.py  test_pi.py  test_polynomial_expansion.py  test_sympy_fallback.py
