[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pca-teachers"
version = "0.0.3"

requires-python = ">= 3.13"
dependencies = [
    # Careful: sympy 1.14.0 requires antlr4-python3-runtime==4.11.0
    # Fails with 4.13.2 (at least if tests are ran from Linux Backend)
    "antlr4-python3-runtime==4.11.0",
    "jinja2==3.1.6", 
    "pydantic==2.11.7",
    "sympy==1.14.0"
]

license = {text = "MIT"}
readme = "README.md"
authors = [
    {name = "PCA Teachers", email = "contact@pointcarre.app"},
]
description = "A comprehensive Python framework for educational mathematical content creation"
keywords = ["mathematics", "education", "sympy", "latex", "correction"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Mathematics",
]
urls = {
    "Homepage" = "https://github.com/pointcarre-app/teachers",
    "Repository" = "https://github.com/pointcarre-app/teachers",
    "Issues" = "https://github.com/pointcarre-app/teachers/issues",
}


[tool.setuptools]
package-dir = {"" = "src"}  # Using src layout
include-package-data = true

[tool.setuptools.package-data]
scenery = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["teachers*"]  # Import as 'teachers'

[tool.pydocstyle]
convention = "google"
match = ".*\\.py"